Working example of single image loading bug

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <h1>Demo Applications</h1>
     <h2><a href="http://itunes.apple.com/us/app/brass-monkey/id455013514?mt=8">Install our iPhone App</a> & then select one of the demos.</h2>
     
+    <a href="examples/basics/">
+      <img src="examples/basics/game-icon.png"/>
+    </a>
     <a href="examples/advanced/youtube/index.html">
       <img src="examples/advanced/youtube/images/game-icon.png"/>
     </a>
