Reverted to point to production

--- a/examples/basics/index.html
+++ b/examples/basics/index.html
@@ -2,7 +2,8 @@
 <head>
   <title>Basics - HTML5 SDK for Brass Monkey</title>
 
-  <script type="text/javascript" src="../../brassmonkey.js"></script>
+  <script type="text/javascript" src="/scripts/brassmonkey-swfobject.js"></script>
+  <script type="text/javascript" src="/scripts/brassmonkey-uncompressed.js"></script>
   <script>
     bm.init({
       name: "Basics - SDK Examples",
