Layouts Example Complete. Added Buttons Example

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       padding: 10px 30px;
       line-height: 25px;
     }
+    .container li{
+      list-style-type:circle;
+    }
     .container li a{
       text-decoration: underline;
     }
@@ -38,8 +41,7 @@
 </head>
 <body>
   <a href="http://github.com/brassmonkey/brassmonkeyjs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
-  <div class="container">
-    
+  <div class="container">    
     <h1>Brass Monkey HTML5 SDK</h1>
     <h2><a href="https://github.com/brassmonkey/brassmonkeyjs/blob/master/README.md">Read This To Get Started</a></h2>
     <h2>View Our Presentation: <a href="https://docs.google.com/presentation/pub?id=1T5Ry0-wbbGfChQV9A0OtzCW5paCLAGpFTiM8ASB5pDs&start=false&loop=false&delayms=3000">Intro to the Brass Monkey HTML5 SDK</a></h2>
@@ -47,15 +49,13 @@
     <h1>Demo Applications</h1>
     <h2><a href="http://itunes.apple.com/us/app/brass-monkey/id455013514?mt=8">Install our iPhone App</a> & then select one of the demos.</h2>
     
-    <a href="examples/basics/">
-      <img src="examples/basics/game-icon.png"/>
-    </a>
-    <a href="examples/advanced/youtube/index.html">
-      <img src="examples/advanced/youtube/images/game-icon.png"/>
-    </a>
-    <a href="examples/advanced/soundcloud-player/index.html">
-      <img src="examples/advanced/soundcloud-player/img/game-icon.png"/>
-    </a>
+    <ul>
+      <li><a href="examples/basics/">Basics</a></li>
+      <li><a href="examples/layouts/">Layouts</a></li>
+      <li><a href="examples/buttons/">Buttons</a></li>
+      <li><a href="examples/advanced/youtube/">Youtube</a></li>
+      <li><a href="examples/advanced/soundcloud-player/">Sound Cloud Player</a></li>
+    </ul>
   </div>
 </body>
 </html>
