--- a/examples/basics/index.html
+++ b/examples/basics/index.html
@@ -30,10 +30,8 @@
   </script>
 </head>
 <body>
-  <h1>Slot Color</h1>
-  <div id="slot-color" style="width:100px;height:100px;"></div>
+  <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
   <div id="log"></div>
-  
 </body>
 </html>
 
