--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -2,8 +2,7 @@
 <head>
   <title>Buttons - HTML5 SDK for Brass Monkey</title>
   
-  <script type="text/javascript" src="/scripts/brassmonkey-swfobject.js"></script>
-  <script type="text/javascript" src="/scripts/brassmonkey-uncompressed.js"></script>
+  <script type="text/javascript" src="../../brassmonkey.js"></script>
 
   <script>
     bm.init({
