--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
       <li><a href="examples/basics/">Basics</a></li>
       <li><a href="examples/layouts/">Layouts</a></li>
       <li><a href="examples/buttons/">Buttons</a></li>
-      <li><a href="examples/advanced/youtube/">Youtube</a></li>
-      <li><a href="examples/advanced/soundcloud-player/">Sound Cloud Player</a></li>
+      <li><a href="examples/modes/">Controller Modes</a></li>
+      <li><a href="examples/touch/">Touch Events</a></li>
+      <li><a href="examples/advanced/youtube/">Youtube (Advanced)</a></li>
+      <li><a href="examples/advanced/soundcloud-player/">Sound Cloud Player (Advanced)</a></li>
     </ul>
   </div>
 </body>
