Fixed image reference bug for modes. Properly this time

--- a/examples/modes/index.html
+++ b/examples/modes/index.html
@@ -66,9 +66,9 @@
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
   
   <h1>Select a Controller Mode</h1>
-  <img id="gamepad" src="gamepad-mode.png"/>
-  <img id="navigation" src="navigation-mode.png"/>
-  <img id="keyboard" src="keyboard-mode.png"/>
+  <img id="gamepad" src="gamepad.png"/>
+  <img id="navigation" src="navigation.png"/>
+  <img id="keyboard" src="keyboard.png"/>
   
 </body>
 </html>
