./tools/push.sh

--- a/examples/advanced/youtube/index.html
+++ b/examples/advanced/youtube/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>YouTube</title>
+    <title>YouTube - HTML5 SDK for Brass Monkey</title>
     <style type="text/css">
       body{
         margin:0px;
@@ -81,7 +81,7 @@
 		<script type="text/javascript" src="../../../brassmonkey.js"></script>
 		<script>
       bm.init({
-        name: "Youtube",
+        name: "Youtube - SDK Examples",
         logging: false,
         design: {
           orientation: "portrait",
