--- a/examples/advanced/soundcloud-player/index.html
+++ b/examples/advanced/soundcloud-player/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Continuous SoundCloud Player</title>
+  <title>SoundCloud Player - HTML5 SDK for Brass Monkey</title>
   <link href='http://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
   <link href='css/core.css' rel='stylesheet' type='text/css'>
 
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="../../../brassmonkey.js"></script>
   <script>
     var controller = {
-      name: "Sound Cloud",
+      name: "Sound Cloud - SDK Examples",
       logging: false,
       rootURL: "../../",
       design: {
