./tools/push.sh

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <li><a href="examples/modes/">Controller Modes</a></li>
       <li><a href="examples/touch/">Touch Events</a></li>
       <li><a href="examples/multiplayer/">Multiplayer</a></li>
+      <li><a href="examples/accelerometer/">Accelerometer</a></li>
       <li><a href="examples/advanced/youtube/">Youtube (Advanced)</a></li>
       <li><a href="examples/advanced/soundcloud-player/">Sound Cloud Player (Advanced)</a></li>
     </ul>
