./tools/push.sh

--- a/examples/soundcloud/index.html
+++ b/examples/soundcloud/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Touch - HTML5 SDK for Brass Monkey</title>
+  <title>Sound Cloud Player - HTML5 SDK for Brass Monkey</title>
   <link rel="stylesheet" type="text/css" href="../../shared/styles/shared.css">  
 </head>
 <body>
@@ -27,18 +27,17 @@
     <div class="sub-header">
       <a href="../../"><img src="../../shared/images/return-examples.png"></a>
       <img class="logo" src="../../shared/images/html5-icon.png"/>
-      <h1>Touch</h1>
+      <h1>Sound Cloud</h1>
       <h2>Example from the HTML5 SDK.</h2>
       
     </div>
     <img class="separator" src="../../shared/images/separator.png"/>
     <div class="demo">
-      <iframe src="touch.html" style="height:820px"></iframe>
+      <iframe src="soundcloud.html" style="height:1050px"></iframe>
       <h1>Description</h1>
-      <p>This example covers listening for touch events and demonstrates handling multi-touch via a simple drawing application.</p>
-      <p>Bonus: It supports multiple users simultaneously. Make sure to try drawing with multiple fingers.</p>
+      <p>Similar features to the youtube example. This time using sound cloud's apis to search and find music. Includes ability to scrub the music time line too.</p>
       
-      <a class="download" href="touch.html">Raw HTML (View Source).<img src="../../shared/images/download-icon.png"/></a>
+      <a class="download" href="soundcloud.html">Raw HTML (View Source).<img src="../../shared/images/download-icon.png"/></a>
     </div>
     <img class="separator" src="../../shared/images/separator.png"/>
   </div>
