--- a/examples/soundcloud/soundcloud.html
+++ b/examples/soundcloud/soundcloud.html
@@ -6,7 +6,7 @@
 
 
   <!-- Brass Monkey -->
-  <script type="text/javascript" src="../../../brassmonkey.js"></script>
+  <script type="text/javascript" src="../../brassmonkey.js"></script>
   <script>
     var controller = {
       name: "Sound Cloud - SDK Examples",
@@ -216,8 +216,9 @@
   <script type="text/javascript" src="js/build.min.js"></script>
 </head>
 <body>
+  <div id="player"></div>
   <div id="ui" class="ui-box">
-    <div id="player"></div>
+    
 
     <div id="playlist">
       <div id="buttons" class="ui-box">
