--- a/examples/youtube/youtube.html
+++ b/examples/youtube/youtube.html
@@ -78,7 +78,7 @@
 
 		<script type="text/javascript" src="../third-party/jquery-1.7.1.min.js"></script>    
     <!-- Brass Monkey -->
-		<script type="text/javascript" src="../../../brassmonkey.js"></script>
+		<script type="text/javascript" src="../../brassmonkey.js"></script>
 		<script>
       bm.init({
         name: "Youtube - SDK Examples",
