Fix for the default mode not being GamePad Mode

--- a/examples/modes/modes.html
+++ b/examples/modes/modes.html
@@ -48,7 +48,7 @@
         bm.setNavMode();
       }
       document.getElementById('keyboard').onclick = function(){
-        bm.setKeyboardMode();
+        bm.setKeyboardMode("","Input some text..." );
       }
     }
   </script>
