Fixed download link to point to demos .zip file that includes submodules

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Join the <a href="http://groups.google.com/group/brass-monkey-sdk-private-beta?hl=en"><strong>Brass Monkey Google Group.</strong></a> to join our community.</p>
         
         <a class="download" href="brassmonkey.js">Download brassmonkey.js <img src="shared/images/download-icon.png"/></a>
-        <a class="download" href="https://github.com/brassmonkey/brassmonkeyjs/zipball/master">Download the examples. (.ZIP) <img src="shared/images/download-icon.png"/></a>
+        <a class="download" href="https://github.com/downloads/brassmonkey/brassmonkeyjs/brassmonkeyjs-0.2.0.zip">Download the examples. (.ZIP) <img src="shared/images/download-icon.png"/></a>
         <a class="download" href="http://github.com/brassmonkey/brassmonkeyjs">Clone the examples on github.<img src="shared/images/download-icon.png"/></a>
       
         <h1>Examples</h1>  
