Convergence now on launching from the portal. Removed about button/page. Newer graphics

--- a/examples/convergence/index.html
+++ b/examples/convergence/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-
-<html manifest="offline.appcache">
 <!--
-<html>
+<html manifest="offline.appcache">
 -->
+<html>
+
 <head>
     <meta charset="UTF-8" />
   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=IE8" />
     <title>The Convergence Brass Monkey Mod - Brass Monkey</title>
     
-    <script type="text/javascript" src="../../brassmonkey.js"></script>
+    <script type="text/javascript" src="/scripts/brassmonkey-swfobject.js"></script>
+    <script type="text/javascript" src="/scripts/brassmonkey-uncompressed.js"></script>
     <script type="text/javascript" src="buttons.js"></script>
     
 	<!-- Note: running this exported project from disk may not work exactly like preview, since browsers block some features on the file:// protocol.  Once you've uploaded it to a server, it should work OK. -->
