--- a/examples/convergence/index.html
+++ b/examples/convergence/index.html
@@ -28,6 +28,7 @@
 		#ContentWrapper {
 			width: 970px;
 			height: 650px;
+			overflow: hidden;
 			background-color: white;
         }
 		#UpdateBar {
