Accidentally deleted the canvas elements id. Fixed

--- a/examples/convergence/index.html
+++ b/examples/convergence/index.html
@@ -164,7 +164,7 @@
 	<!-- The canvas the project will render to.  If you change its ID, don't forget to change the
 	ID the runtime looks for in the jQuery ready event (above). -->
 	<div id="ContentWrapper">
-	<canvas width="960" height="640" oncontextmenu="return false;" onselectstart="return false;" >
+	<canvas id="c2canvas" width="960" height="640" oncontextmenu="return false;" onselectstart="return false;" >
     <div class="wrapper">
   		<div class="error-message">
         <div class="error-message-wrapper">
