--- a/examples/buttons/buttons.html
+++ b/examples/buttons/buttons.html
@@ -6,6 +6,9 @@
 
   <script>
     bm.init({
+    	swfURL:"../../brassmonkey.swf",
+      bmAppId:"62e822bc0e6b9f22fc158763591845be",
+      bmMaxPlayers:1,
       name: "Buttons - SDK Examples",
       design: {
         orientation: "portrait",
@@ -36,6 +39,16 @@
       }
     });
     
+  	bm.onDeviceAvailable(function(device){  		
+  		device.controlMode=bm.MODE_GAMEPAD;
+  		return device;
+  	});
+  	
+
+    function close() {
+    	bm.close();
+    } ;
+    
     bm.onShowSlot(function(color){
       document.getElementById('slot-color').style.background = color;
     });
@@ -54,7 +67,7 @@
 
   </script>
 </head>
-<body style="margin:0px;background:white;">
+<body style="margin:0px;background:white;" onunload="close();">
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
   
   <img id="up" src="button-up.png" />
