--- a/examples/convergence/index.html
+++ b/examples/convergence/index.html
@@ -159,7 +159,7 @@
 </script>
 </head> 
  
-<body>
+<body onunload="close();">
 	<!-- The canvas the project will render to.  If you change its ID, don't forget to change the
 	ID the runtime looks for in the jQuery ready event (above). -->
 	<div id="ContentWrapper">
