--- a/examples/the-convergence/index.html
+++ b/examples/the-convergence/index.html
@@ -29,7 +29,7 @@
 </script>
 </head> 
  
-<body onunload="close();">
+<body>
 	<!-- The canvas the project will render to.  If you change its ID, don't forget to change the
 	ID the runtime looks for in the jQuery ready event (above). -->
 	<div id="ContentWrapper">
