--- a/examples/basics/basics.html
+++ b/examples/basics/basics.html
@@ -21,11 +21,7 @@
   		device.controlMode=bm.MODE_GAMEPAD;
   		return device;
   	});
-  	
-    function close() {
-    	bm.close();
-    } ;
-    
+  	    
     bm.onDeviceConnected(function(device){
       document.getElementById('log').innerHTML += '<p>A Device Connected: "'+device.deviceName+'" | "'+device.deviceId+'"</p>';
     });
@@ -40,7 +36,7 @@
 
   </script>
 </head>
-<body style="margin:0px;background:white;" onunload="close();">
+<body style="margin:0px;background:white;">
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
   <div id="log"></div>
 </body>
