--- a/examples/modes/modes.html
+++ b/examples/modes/modes.html
@@ -33,11 +33,6 @@
   		return device;
   	});
   	
-    
-    function close() {
-    	bm.close();
-    } ;
-    
     bm.onShowSlot(function(color){
       document.getElementById('slot-color').style.background = color;
     });
@@ -75,7 +70,7 @@
     }
   </style>
 </head>
-<body style="margin:0px;background:white;" onload="onload();" onunload="close();">
+<body style="margin:0px;background:white;" onload="onload();">
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
   
   <h1>Select a Controller Mode</h1>
