--- a/examples/multiplayer/multiplayer.html
+++ b/examples/multiplayer/multiplayer.html
@@ -22,9 +22,7 @@
   		device.controlMode=bm.MODE_GAMEPAD;
   		return device;
   	});    
-    function close() {
-    	bm.close();
-    } ;
+
     var players = {},
         initialMessage = "Connect to 'Multiplayer - SDK Examples' (Requires 2 players)";//with at least 2 players.";
         
@@ -91,7 +89,7 @@
     }
   </script>
 </head>
-<body onload="onload();" style="background:black;" onunload="close();">
+<body onload="onload();" style="background:black;">
   <div id="slot-color" style="width:100px;height:100px;text-align:center;line-height:100px;font-family:Arial;">Slot Color</div>
   <div id="instructions" style="width:512px;height:32px;line-height:32px;font-size:16px;font-family:Arial;color:white;"></div>
   <canvas id="canvas"></canvas>
