First pass introduction doc. Dynamic Controller Demo added

--- a/examples/modes/modes.html
+++ b/examples/modes/modes.html
@@ -29,7 +29,7 @@
     });
     
   	bm.onDeviceAvailable(function(device){  		
-  		device.controlMode=bm.MODE_GAMEPAD;
+  		device.controlMode=bm.MODE_KEYBOARD;
   		return device;
   	});
   	
