Added slide deck. Started playing around with dynamic controls demo

--- a/examples/dynamic/index.html
+++ b/examples/dynamic/index.html
@@ -20,6 +20,9 @@
    	
    	schemeCallback = function (sName){
    		bm.start();
+      setInterval(function(){
+         
+      },33);
    	};
  	
   	bm.onDeviceAvailable(function(a){
