--- a/examples/dynamic/index.html
+++ b/examples/dynamic/index.html
@@ -10,7 +10,7 @@
       name: "Dynamic - SDK Examples",
       bmMaxPlayers:1,
       bmAppId:"f056231599dd49a786216bb7aefb5b7d",
-      swfURL:"../../swf/bin/brassmonkey.swf",
+      swfURL:"../../swf/bin/brassmonkey.swf"
     });
     
    	bm.onBrassMonkeyLoaded(function(a){
