--- a/examples/dynamic/index.html
+++ b/examples/dynamic/index.html
@@ -26,7 +26,7 @@
    	};
  	
   	bm.onDeviceAvailable(function(a){
-  		console.log('top onDeviceAvailable'+ a.deviceName);
+  		//console.log('top onDeviceAvailable'+ a.deviceName);
   		a.controlMode=bm.MODE_GAMEPAD;
   		a.attributes.someName=true;
   		document.getElementById('log').innerHTML += '<p>A bm.onDeviceAvailable: "'+ a.deviceName+'" | "'+ a.deviceId+'"</p>';
