--- a/examples/the-convergence/index.html
+++ b/examples/the-convergence/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=IE8" />
-  <title>The Convergence Brass Monkey Mod - Brass Monkey</title>
+  <title>The Convergence - Brass Monkey</title>
   
   <link rel="stylesheet" type="text/css" href="styles/main.css"/>	
 </head>  
