Linked to The Convergence in the examples

--- a/index.html
+++ b/index.html
@@ -143,6 +143,19 @@
         </a>
         <img class="separator" src="shared/images/separator.png"/>
         
+        <a class="example" href="examples/the-convergence/index.html">
+          <div class="wrapper">
+            <img class="logo" src="images/examples-the-convergence.png"/>
+            <div class="example-info">
+              <h1>The Convergence (Advanced)</h1>
+              <p>A basic platformer integrated with Brass Monkey's tech. Demonstrates using buttons to create D-Pad like UI for platformers. </p><p>Originally made by Currant Cat using Construct 2.</p>
+              <img class="launch" src="shared/images/launch-app-button.png"/>
+            </div>
+            <div class="clear"></div>
+          </div>
+        </a>
+        <img class="separator" src="shared/images/separator.png"/>
+        
         <a class="example" href="examples/youtube/index.html">
           <div class="wrapper">
             <img class="logo" src="images/examples-youtube.png"/>
