Progress on new refactor

--- a/examples/accelerometer/accelerometer.html
+++ b/examples/accelerometer/accelerometer.html
@@ -2,7 +2,11 @@
 <head>
   <title>Accelerometer - HTML5 SDK for Brass Monkey</title>
   
-  <script type="text/javascript" src="../../brassmonkey.js"></script>
+  <!--  Include development implementation of brassmonkey.js. 
+        RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
+  <script type="text/javascript" src="../../src/swfobject.js"></script>
+  <script type="text/javascript" src="../../src/brassmonkey.js"></script>
+  
   <script type="text/javascript" src="accelerometer.js"></script>
   
   <script>
@@ -22,10 +26,6 @@
   		device.controlMode=bm.MODE_GAMEPAD;
   		return device;
   	});
-  	
-    bm.onBrassMonkeyLoaded(function(a){
-    	bm.start();
-    });
         
     bm.onShowSlot(function(color){
       document.getElementById('slot-color').style.background = color;
