--- a/examples/multiplayer/index.html
+++ b/examples/multiplayer/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Multiplayer - HTML5 SDK for Brass Monkey</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  
   <link rel="stylesheet" type="text/css" href="../../shared/styles/shared.css">  
 </head>
 <body>
