--- a/examples/soundcloud/soundcloud.html
+++ b/examples/soundcloud/soundcloud.html
@@ -6,7 +6,10 @@
 
 
   <!-- Brass Monkey -->
-  <script type="text/javascript" src="../../brassmonkey.js"></script>
+    <!--  Include development implementation of brassmonkey.js. 
+          RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
+    <script type="text/javascript" src="../../src/swfobject.js"></script>
+    <script type="text/javascript" src="../../src/brassmonkey.js"></script>
   <script>
     var controller = {
       name: "Sound Cloud - SDK Examples",
