--- a/examples/the-convergence/index.html
+++ b/examples/the-convergence/index.html
@@ -39,7 +39,12 @@
   </div>
       
 	<!-- Pages load faster with scripts at the bottom -->
-	<script type="text/javascript" src="../../brassmonkey.js"></script>
+  	
+  	<!--  Include development implementation of brassmonkey.js. 
+          RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
+  <script type="text/javascript" src="../../src/swfobject.js"></script>
+  <script type="text/javascript" src="../../src/brassmonkey.js"></script>
+	
 	<script src="scripts/jquery-1.6.3.min.js"></script>
 	<script src="scripts/controls.js"></script>
 
