--- a/examples/touch/touch.html
+++ b/examples/touch/touch.html
@@ -2,7 +2,10 @@
 <head>
   <title>Touch - HTML5 SDK for Brass Monkey</title>
 
-  <script type="text/javascript" src="../../brassmonkey.js"></script>
+  <!--  Include development implementation of brassmonkey.js. 
+        RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
+  <script type="text/javascript" src="../../src/swfobject.js"></script>
+  <script type="text/javascript" src="../../src/brassmonkey.js"></script>
 
   <script>
     bm.init({
