--- a/examples/youtube/youtube.html
+++ b/examples/youtube/youtube.html
@@ -7,7 +7,10 @@
 
 		<script type="text/javascript" src="../third-party/jquery-1.7.1.min.js"></script>    
     <!-- Brass Monkey -->
-		<script type="text/javascript" src="../../brassmonkey.js"></script>
+  		<!--  Include development implementation of brassmonkey.js. 
+            RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
+    <script type="text/javascript" src="../../src/swfobject.js"></script>
+    <script type="text/javascript" src="../../src/brassmonkey.js"></script>
 		<script>
       bm.init({
         name: "Youtube - SDK Examples",
