--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>HTML5 - Brass Monkey SDK</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  
   <link rel="stylesheet" type="text/css" href="shared/styles/shared.css">  
 </head>
 <body>
