Basic event system. Don't ever do this at home. Proper implementation coming

--- a/src/websockets/test.html
+++ b/src/websockets/test.html
@@ -5,8 +5,10 @@
   <title>WebSocket Test</title>
 
   <script language="javascript" type="text/javascript" src="../core.js" ></script>
+  
   <script language="javascript" type="text/javascript" src="../base64.js" ></script>
   <script language="javascript" type="text/javascript" src="../resources.js" ></script>
+  <script language="javascript" type="text/javascript" src="../device.js" ></script>
   <script language="javascript" type="text/javascript" src="../brassmonkey.js" ></script>
   <script language="javascript" type="text/javascript" src="websockets.js" ></script>
 
