Removed submodule dependency

--- a/src/websockets/test.html
+++ b/src/websockets/test.html
@@ -48,6 +48,10 @@
         }]
       }
     });
+    
+    bm.on( 'deviceconnected', function (e){
+      console.log(e.id);
+    });
   </script>
 </head>
 <body style="margin:0px">
