--- a/src/websockets/test.html
+++ b/src/websockets/test.html
@@ -7,9 +7,8 @@
   <script language="javascript" type="text/javascript" src="../core.js" ></script>
   
   <script language="javascript" type="text/javascript" src="../base64.js" ></script>
-  <script language="javascript" type="text/javascript" src="../resources.js" ></script>
   
-  <script language="javascript" type="text/javascript" src="../events.js" ></script>
+  <script language="javascript" type="text/javascript" src="../resources.js" ></script>
   
   <script language="javascript" type="text/javascript" src="../device.js" ></script>
   
@@ -28,9 +27,9 @@
         touchEnabled: false,
         accelerometerEnabled: false,
         images:[
-          'background.png',
-          'button-up.png',
-          'button-down.png'
+          '../../examples/shared/background.png',
+          '../../examples/buttons/button-up.png',
+          '../../examples/buttons/button-down.png'
         ],
         layout:[{
           type:   "image",
@@ -57,7 +56,7 @@
       console.log(e.type);
     });
     
-    bm.trigger(new bm.DeviceConnectedEvent("notadevice"));
+    bm.trigger('deviceconnected',{type:'deviceconnected',device:'notadevice'});
     
   </script>
 </head>
