added allDevices proxy, links to change control mode

--- a/src/test.html
+++ b/src/test.html
@@ -63,6 +63,13 @@
 </head>
 <body style="margin:0px">
 
+<br><br>
+<ul>
+<li><a href="javascript:void(0)" onClick="bm.allDevices().setMode('keyboard')"> keyboard </a></li>
+<li><a href="javascript:void(0)" onClick="bm.allDevices().setMode('navigation')"> navigation </a></li>
+<li><a href="javascript:void(0)" onClick="bm.allDevices().setMode('gamepad')"> gamepad </a></li>
+<li><a href="javascript:void(0)" onClick="bm.allDevices().setMode('wait')"> wait </a></li>
+</ul>
 
 </body>
 </html>
