New build system based on Grunt.js. Concat, minify, lint, and yuidoc commands added. TODO: Get it working without requiring any globally installed node.js modules

--- a/src/test.html
+++ b/src/test.html
@@ -119,7 +119,7 @@
       drawContext.fillRect(0,0,320,480);
       
       drawContext.lineWidth = 3;
-      drawContext.lineCap = ctx.lineJoin = "round";
+      drawContext.lineCap = drawContext.lineJoin = "round";
     }
 
 
