integrated Shaule's registry code

--- a/src/test.html
+++ b/src/test.html
@@ -14,6 +14,7 @@
   <script language="javascript" type="text/javascript" src="flash/swfobject.js" ></script>
   <script language="javascript" type="text/javascript" src="flash/flash.js" ></script>
   
+  <script language="javascript" type="text/javascript" src="websockets/registry.js" ></script>
   <script language="javascript" type="text/javascript" src="websockets/websockets.js" ></script>
 
   <script language="javascript" type="text/javascript">
@@ -22,7 +23,7 @@
       name: "Websockets Test",
       maxPlayers: 1,
       
-      //appId:"62e822bc0e6b9f22fc158763591845be",
+      appId:"62e822bc0e6b9f22fc158763591845be",
       swfURL: "swf/bin/brassmonkey.swf",
       
       design: {
