Added Grunt.js based server task to replace Python based 'server' script. Converted the Convergence, the basics demo, the layout demo, and the button demo to use the new SDK work. Updated README.md with new server running instructions

--- a/examples/the-convergence/index.html
+++ b/examples/the-convergence/index.html
@@ -40,10 +40,17 @@
       
 	<!-- Pages load faster with scripts at the bottom -->
   	
-  	<!--  Include development implementation of brassmonkey.js. 
-          RECOMMENDED: Use the minified brassmonkey.js when deploying. -->
-  <script type="text/javascript" src="../../src/swfobject.js"></script>
-  <script type="text/javascript" src="../../src/brassmonkey.js"></script>
+  <!--  Include development implementation of Brass Monkey. 
+        RECOMMENDED: Use the minified brassmonkey.min.js when deploying. -->
+  <script language="javascript" type="text/javascript" src="../../src/core.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/base64.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/resources.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/device.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/detect.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/flash/swfobject.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/flash/flash.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/websockets/registry.js" ></script>
+  <script language="javascript" type="text/javascript" src="../../src/websockets/websockets.js" ></script>
 	
 	<script src="scripts/jquery-1.6.3.min.js"></script>
 	<script src="scripts/controls.js"></script>
