added minimum version

--- a/src/test.html
+++ b/src/test.html
@@ -25,6 +25,8 @@
       
       appId:"62e822bc0e6b9f22fc158763591845be",
       swfURL: "swf/bin/brassmonkey.swf",
+
+      minimumVersion: {major: 1, minor: 5},
       
       design: {
         orientation: "portrait",
