changed handler to id

--- a/src/test.html
+++ b/src/test.html
@@ -35,14 +35,14 @@
         preload:[],
         layout:[{
             type:   "image",
-            src:  '../examples/shared/background.png',
+            src:    '../examples/shared/background.png',
             x:      0,
             y:      0,
             width:  320,
             height: 480
           }, {
             type:       "button",
-            handler:    "push",
+            id:         "push",
             srcUp:      '../examples/buttons/button-up.png',
             srcDown:    '../examples/buttons/button-down.png',
             x:          (320-160)/2-3,
