removed additional size

--- a/src/test.html
+++ b/src/test.html
@@ -36,9 +36,7 @@
         layout:[{
             type:   "image",
             id:     "bg",
-            src:    '../examples/shared/background.png',
-            width:  320,
-            height: 480
+            src:    '../examples/shared/background.png'
           }, {
             type:       "button",
             id:         "push",
