--- a/examples/connection-helper/connection-helper.html
+++ b/examples/connection-helper/connection-helper.html
@@ -6,48 +6,13 @@
   
   <script>
     bm.init({
-    	name: "Connection Helper",
+    	name: "Brass Monkey",
       bmMaxPlayers:1,
       swfURL:"../../src/swf/bin/brassmonkey.swf",
       design: {
         orientation: "portrait",
         touchEnabled: false,
-        accelerometerEnabled: false,
-        images:[
-          '../shared/background.png',
-          'bananas.png',
-          'pineapple.png',
-          'watermelon.png'
-        ],
-        layout:[{
-          type:   "image",
-          image:  0,
-          x:      0,
-          y:      0,
-          width:  320,
-          height: 480
-        },{
-          type:   "image",
-          image:  1,
-          x:      9,
-          y:      16,
-          width:  128,
-          height: 128
-        },{
-          type:   "image",
-          image:  2,
-          x:      110,
-          y:      170,
-          width:  128,
-          height: 128
-        },{
-          type:   "image",
-          image:  3,
-          x:      181,
-          y:      336,
-          width:  128,
-          height: 128
-        }]
+        accelerometerEnabled: false
       }
     });
     
